Delete some useless logic